--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
           <manifest>
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>com.mycompany.app.App</mainClass>
+            <mainClass>com.mycompany.app.App</mainClass> <!-- evtl. anpassen auf neuen Pfad -->
           </manifest>
         </archive>
       </configuration>
